update app note

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".UiInterface.AddNoteActivity" android:parentActivityName=".UiInterface.MainActivity"/>
+    <activity android:name=".UiInterface.UpdateNoteDetails" android:parentActivityName=".UiInterface.MainActivity"/>
+    <activity android:name=".UiInterface.UpdateNotePhotoDetails" android:parentActivityName=".UiInterface.MainActivity"/>
+    <activity android:name=".UiInterface.UpdateNoteCheckDetails" android:parentActivityName=".UiInterface.MainActivity"/>
+
     </application>
 
 </manifest>
